<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>picky_robot</name>
  <version>0.0.0</version>
  <description>
    A robot that detects objects using an Orbbec Astra and LINEMOD, then pushes
    them off the table.
  </description>
  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>
  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urx</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>linemod_basic_detector</build_depend>
  <build_depend>intra_process_demo</build_depend>

  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>astra_camera</exec_depend>
  <exec_depend>ork_renderer</exec_depend>
  <exec_depend>intra_process_demo</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>linemod_basic_detector</exec_depend>
  <exec_depend>intra_process_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>